server/crash_ascii.log
node : file:///D:/Study%20Material/Programmi
ng/WebDev/myfreecodecampstuff/PersonalProjec
ts/StudyGroup/server/routes/chat.js:247
At line:1 char:1
+ node index.js > crash.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: 
    (file:///D:/Stud...tes/chat.js:247:Str  
  ing) [], RemoteException
    + FullyQualifiedErrorId : NativeCommand 
   Error
 
    let channel = await Channel.findOne({
        ^

SyntaxError: Identifier 'channel' has 
already been declared
    at compileSourceTextModule 
(node:internal/modules/esm/utils:346:16)
    at ModuleLoader.moduleStrategy (node:int
ernal/modules/esm/translators:107:18)
    at #translate 
(node:internal/modules/esm/loader:540:12)
    at ModuleLoader.loadAndTranslate 
(node:internal/modules/esm/loader:587:27)
    at async ModuleJob._link (node:internal/
modules/esm/module_job:162:19)

Node.js v22.19.0
